k8s-argocd/base/paymybuddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymybuddy-service
  namespace: paymybuddy
spec:
  selector:
    app: paymybuddy-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
